# app-java-demo

./: .gitignore  CVE-2025-12345_LOOKUP.md  CVE-2025-23333-REPORT.md  Dockerfile  ENDOR-LABS-CHECK-INSTRUCTIONS.md  ENDOR-MCP-CONFIGURATION.md  ENDOR_LABS_SCAN_REPORT.md  ENDOR_SCAN_README.md  ENDOR_SCAN_RESULTS.md  ENDOR_SCAN_TIMEOUT_DEBUG.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PLATFORM_TEAM_GUIDE.md  QUICK_ACTION_SUMMARY.md  README.md  README_TIMEOUT_ISSUE.md  SCAN_DOCUMENTATION_INDEX.md  SCAN_README.md  SCAN_REPORT.md  SCAN_RESULTS.md  SCAN_SUMMARY.md  SECURITY_FIXES.md  SECURITY_SCANNING.md  SECURITY_SCAN_RESULTS.md  TIMEOUT_DEBUG_ANALYSIS.md  TIMEOUT_INVESTIGATION_SUMMARY.md  VULNERABILITY-CHECK-README.md  VULNERABILITY_CHECK_REPORT.md  VULNERABILITY_CHECK_STATUS.md  VULNERABILITY_SCAN.md  VULNERABILITY_SCANNING.md  VULNERABILITY_SCAN_REPORT.md  VULNERABILITY_SCAN_RESULTS.md  VULNERABILITY_SCAN_SUMMARY.md  call_graph.dot  cg.json  check-dependencies.sh  check-vulnerabilities.sh  comprehensive-vuln-check.py  comprehensive-vulnerability-report.md  (+21 more)
benchmark/: BUILD.bazel  benchmark_test.go
benchmark/custom/: BUILD.bazel  alternatives.js  anon.js  array.js  basic.js  call.js  class.js  funcs.js  obj.js  proto.js  refs.js
benchmark/micro/: arguments.js  assign1.js  classes.js  client1.js  client2.js  default-parameter.js  defineProperty.js  destructuring.js  for-in.js  fun.js  import1.mjs  import10.mjs  iterators.js  mix.js  more1.js  prototypes.js  prototypes3.js  rest.js  simple.js  spread.js  super.js
benchmark/scripts/: stats.sh
(+43 files in other folders)
